# mgm

./: .travis.yml  CMakeLists.txt  Makefile  README.md  README.txt  census_tools.cc  data  dvec.cc  dvec2.cc  img_tools.h  main_mgm.cc  main_mgm_multi.cc  mgm.1  mgm.cc  mgm_core.cc  mgm_core.h  mgm_costvolume.cc  mgm_costvolume.h  mgm_multi_wrapper.py  mgm_multiscale.cc  mgm_multiscale.h  mgm_print_energy.h  mgm_refine.h  mgm_weights.h  point.cc  readme.txt  refine.h  shear.c  smartparameter.h  stereo_utils.cc  stereo_utils.h
.github/workflows/: test.yml
docs/: README_multiscale.md
iio/: CMakeLists.txt  FindOPENEXR.cmake  iio.c  iio.h
include/mgm/: mgm.h
matlab/: MGM_wrapper.m  mgm_o.cc
src/: main_mgm.cc  main_mgm_multi.cc
src/impl/: dvec.cc  img.cc  img.h  img_interp.h  img_tools.h  mgm_core.cc  mgm_core.h  mgm_costvolume.cc  mgm_multiscale.cc  point.h  remove_small_cc.c  shear.h  smartparameter.cc  smartparameter.h
src/matlab/: Makefile  dvec.h  img.cc  img.h  mgm_o.cc  readme.txt  runme.m  stereomatch_MGM.m
src/matlab/data/: cost.tif  disp.tif
